// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<Dropdown /> should allow to render menu inside another element 1`] = `
<div>
  <div
    id="menu-container"
  >
    <div
      aria-labelledby="«r7»"
      class="junipero dropdown-menu"
      data-floating-ui-focusable=""
      id="«r8»"
      role="listbox"
      style="position: fixed; top: 0px; left: 0px;"
      tabindex="0"
    >
      <ul
        class="menu-inner"
      >
        <li
          class="dropdown-item"
          role="option"
        >
          Item 1
        </li>
      </ul>
    </div>
  </div>
  <div
    class="junipero dropdown opened"
  >
    <span
      class="dropdown-toggle opened"
      id="«r7»"
    >
      Click me
    </span>
  </div>
</div>
`;

exports[`<Dropdown /> should allow to use groups 1`] = `
<div>
  <div
    class="junipero dropdown opened"
  >
    <span
      class="dropdown-toggle opened"
      id="«ra»"
    >
      Click me
    </span>
    <div
      aria-labelledby="«ra»"
      class="junipero dropdown-menu"
      data-floating-ui-focusable=""
      id="«rb»"
      role="listbox"
      style="position: fixed; top: 0px; left: 0px;"
      tabindex="0"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="dropdown-group"
        >
          <div
            class="junipero extra group-title"
          >
            Group 1
          </div>
          <div
            class="options"
          >
            <li
              class="dropdown-item"
              role="option"
            >
              Item 1
            </li>
            <li
              class="dropdown-item"
              role="option"
            >
              Item 2
            </li>
          </div>
        </div>
        <div
          class="dropdown-group"
        >
          <div
            class="junipero extra group-title"
          >
            Group 2
          </div>
          <div
            class="options"
          >
            <li
              class="dropdown-item"
              role="option"
            >
              Item 3
            </li>
            <li
              class="dropdown-item"
              role="option"
            >
              Item 4
            </li>
          </div>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<Dropdown /> should auto close when disabled prop changes 1`] = `
<div>
  <div
    class="junipero dropdown opened"
  >
    <span
      class="dropdown-toggle opened"
      id="«r4»"
    >
      Click me
    </span>
    <div
      aria-labelledby="«r4»"
      class="junipero dropdown-menu"
      data-floating-ui-focusable=""
      id="«r5»"
      role="listbox"
      style="position: fixed; top: 0px; left: 0px;"
      tabindex="0"
    >
      <ul
        class="menu-inner"
      >
        <li
          class="dropdown-item"
          role="option"
        >
          Item 1
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<Dropdown /> should auto close when disabled prop changes 2`] = `
<div>
  <div
    class="junipero dropdown disabled"
  >
    <span
      class="dropdown-toggle"
      id="«r4»"
    >
      Click me
    </span>
  </div>
</div>
`;

exports[`<Dropdown /> should render 1`] = `
<div>
  <div
    class="junipero dropdown"
  >
    <span
      class="dropdown-toggle"
      id="«r1»"
    >
      Click me
    </span>
  </div>
</div>
`;

exports[`<Dropdown /> should render 2`] = `
<div>
  <div
    class="junipero dropdown opened"
  >
    <span
      class="dropdown-toggle opened"
      id="«r1»"
    >
      Click me
    </span>
    <div
      aria-labelledby="«r1»"
      class="junipero dropdown-menu"
      data-floating-ui-focusable=""
      id="«r2»"
      role="listbox"
      style="position: fixed; top: 0px; left: 0px;"
      tabindex="0"
    >
      <ul
        class="menu-inner"
      >
        <li
          class="dropdown-item"
          role="option"
        >
          Item 1
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`useDropdwon() should allow to animate dropdown: Enter: In dom 1`] = `
<div>
  <div
    class="junipero dropdown opened"
  >
    <span
      class="dropdown-toggle opened"
      id="«rl»"
    >
      Click me
    </span>
    <div
      aria-labelledby="«rl»"
      class="junipero dropdown-menu"
      data-floating-ui-focusable=""
      id="«rm»"
      role="listbox"
      style="position: fixed; top: 0px; left: 0px;"
      tabindex="0"
    >
      <ul
        class="menu-inner jp-slide-in-down-menu-enter-done"
      >
        <li
          class="dropdown-item"
          role="option"
        >
          Item 1
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`useDropdwon() should allow to animate dropdown: Enter: Not in dom 1`] = `
<div>
  <div
    class="junipero dropdown"
  >
    <span
      class="dropdown-toggle"
      id="«rl»"
    >
      Click me
    </span>
  </div>
</div>
`;

exports[`useDropdwon() should allow to animate dropdown: Exit: Not in dom 1`] = `
<div>
  <div
    class="junipero dropdown"
  >
    <span
      class="dropdown-toggle"
      id="«rl»"
    >
      Click me
    </span>
  </div>
</div>
`;

exports[`useDropdwon() should keep the menu in dom when animated and apparition is css: Enter: Already in dom 1`] = `
<div>
  <div
    class="junipero dropdown"
  >
    <span
      class="dropdown-toggle"
      id="«ro»"
    >
      Click me
    </span>
    <div
      aria-labelledby="«ro»"
      class="junipero dropdown-menu"
      data-floating-ui-focusable=""
      id="«rp»"
      role="listbox"
      style="position: fixed; top: 0px; left: 0px;"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`useDropdwon() should keep the menu in dom when animated and apparition is css: Enter: Still in dom 1`] = `
<div>
  <div
    class="junipero dropdown opened"
  >
    <span
      class="dropdown-toggle opened"
      id="«ro»"
    >
      Click me
    </span>
    <div
      aria-labelledby="«ro»"
      class="junipero dropdown-menu"
      data-floating-ui-focusable=""
      id="«rp»"
      role="listbox"
      style="position: fixed; top: 0px; left: 0px;"
      tabindex="0"
    >
      <ul
        class="menu-inner jp-slide-in-down-menu-enter-done"
      >
        <li
          class="dropdown-item"
          role="option"
        >
          Item 1
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`useDropdwon() should keep the menu in dom when animated and apparition is css: Exit: Still in dom 1`] = `
<div>
  <div
    class="junipero dropdown"
  >
    <span
      class="dropdown-toggle"
      id="«ro»"
    >
      Click me
    </span>
    <div
      aria-labelledby="«ro»"
      class="junipero dropdown-menu"
      data-floating-ui-focusable=""
      id="«rp»"
      role="listbox"
      style="position: fixed; top: 0px; left: 0px;"
      tabindex="0"
    />
  </div>
</div>
`;
